--- a/app/templates/components/user_log.html
+++ b/app/templates/components/user_log.html
@@ -1,23 +1,26 @@
 <div class="userlog">
     {% if not user.is_authenticated %}
 
-        <a class="nav-link text-dark font-italic d-inline-flex align-self-start align-items-center" 
-            href="{% url 'account_signup' %}" role="button">
-        <i class="fa-solid fa-user-plus"></i>
+    <div class="loglink">
+        <a href="{% url 'account_signup' %}">
+            <i class="fa-solid fa-user-plus"></i>
             <div class="menu align-self-start">Inscription</div>
         </a>
-        <a class="nav-link text-dark font-italic d-inline-flex align-self-start align-items-center"
-                href="{% url 'account_login' %}" role="button">
+    </div>
+    <div class="loglink">
+        <a href="{% url 'account_login' %}">
             <i class="fa-solid fa-arrow-right-to-bracket"></i>
             <div class="menu">Connexion</div>
         </a>
-
+    </div>
+        
     {% else %}
-
-        <a class="nav-link text-dark font-italic d-inline-flex align-self-start align-items-center" 
-            href="{% url 'logout' %}" role="button">
+        
+    <div class="loglink">
+        <a href="{% url 'logout' %}" role="button">
             <i class="fa-solid fa-arrow-right-from-bracket"></i>
             <div class="menu">Déconnexion</div>
         </a>
+    </div>
     {% endif %}
 </div>
