--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} 
 
 {% block content %}
+<div class="content">
 
   <div class="container col-12 col-md-6 col-lg-3 text-center">
 
@@ -51,4 +52,5 @@
     <a class="back_link" href="{% url 'signup' %}">Tu n'as pas de compte ?</a>
 
   </div>
+</div>
 {% endblock %}
