--- a/app/templates/account/signup.html
+++ b/app/templates/account/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html"  %}
-
 {% block content %}
 
+<div class="content">
     <div class="container col-12 col-md-6 col-lg-3 text-center">
 
         {% if message %}
@@ -72,6 +72,7 @@
 
         <a class="back_link" href="{% url 'account_login' %}">Tu as déjà un compte ?</a>
     </div>
+</div>
 
 {% endblock %}
 
