--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,8 +44,7 @@
       display:flex;
       padding:0;
       margin:0;
-      background-color:bisque;
-      overflow-y: hidden;
+      overflow-x: hidden;
     }
   </style>
 
@@ -55,10 +54,7 @@
     {% include 'components/sidebar.html' %}
     <div class="central">
       {% include 'components/topbar.html' %}
-    
-      <div class="content">
-       {% block content %} {% endblock %}
-      </div>
+        {% block content %} {% endblock %}
     </div>
     
     <footer>
@@ -69,6 +65,6 @@
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
     <script src="{% static 'assets/js/blog.js' %}"></script>
-    <script src="{% static 'assets/js/dark-mode-switch.js' %}"></script>
+    <script src="{% static 'assets/js/factory.js' %}"></script>
   </body>
 </html>
