adding some style with css

--- a/app/home/static/assets/css/_sidebar.scss
+++ b/app/home/static/assets/css/_sidebar.scss
@@ -92,7 +92,8 @@ padding-top: 0.5em;
 }
 
 .sidebar .menu .menu-item a .details {
-  text-align:right;
+  width:20%;
+  text-align:center;
 }
 
 .sidebar .menu .menu-item:hover{
