--- a/app/home/static/assets/css/_content.scss
+++ b/app/home/static/assets/css/_content.scss
@@ -1,6 +1,6 @@
 .content{
-  padding-left:5%;
-  padding-right:5%;
+  padding-left:2%;
+  padding-right:2%;
 }
 
 .form-control {
@@ -18,4 +18,73 @@
 .prettyprint {
   font-size: large;
   background-color: rgb(220, 208, 208);
+}
+
+.container .article_p {
+  text-align:justify;
+}
+
+.container .article_h1 {
+  color:red;
+}
+
+// categories
+
+.content .categories {
+  display:flex;
+  flex:1;
+  justify-content:center;
+  align-items: center;
+  align-self: center;
+  padding-top:1em;
+  padding-bottom:1em;
+  flex-wrap: wrap;
+}
+
+.content .categories .container{
+  display:flex;
+  flex: 1 0 15%;
+  flex-direction: column;
+  padding:0.2em;
+  margin:0.5em;
+  justify-content:center;
+  align-items:center;
+  background-color:#defbf7;
+  height:150px;
+  width: 150px;
+}
+
+.content .categories .container img{
+  width: 100px;
+  height: auto;
+  max-height:125px;
+  transition: all 1s ease;
+}
+
+.content .categories .container img:hover{
+  transform: scale(1.25);
+}
+
+.content .categories .container .category {
+  font-size: 1em;
+  font-weight: bold;
+  color: black;
+}
+
+//articles
+
+.central .topbar .title h2 {
+  color:rgb(51, 0, 255);
+}
+
+.central .container {
+  padding:0.2em 1em 0.2em 1em;
+  font-family:"Source Code Pro", monospace;
+  background-color: #defbf7;
+}
+
+.central .container .prettyprint {
+  background-color: #a3f0e6;
+  width: max-content;
+
 }
