adding templates for managing success and errors when sending mail

--- a/app/mail/templates/mail/mail_me.html
+++ b/app/mail/templates/mail/mail_me.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-
+<div class="content">
+  <form class="mail-form" method="POST" action="{% url 'mail_me' %}">
+    {% csrf_token %}
+    <input class="form-control mail-object" name='mail-object' type="text" placeholder="Objet de ton e-mail" autofocus>
+    <textarea class="form-control mail-text" name='mail-text' placeholder="Corps de ton e-mail"></textarea>
+    <div class="button-group">
+      <input class="delete-all" type="reset" value="Tout effacer">
+      <button class="mail-send" type="submit">Envoyer</button>
+    </div>
+  </form>
+</div>
 {% endblock %}
